--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,31 +10,31 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "axios": "^0.18.0",
-    "core-js": "^3.4.3",
-    "register-service-worker": "^1.0.0",
-    "typesafe-vuex": "^3.1.1",
-    "vee-validate": "^2.1.7",
-    "vue": "^2.5.22",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.3.0",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.4.4",
-    "vuex": "^3.1.0"
+    "axios": "^0.21.1",
+    "core-js": "^3.12.1",
+    "register-service-worker": "^1.7.2",
+    "typesafe-vuex": "^3.2.2",
+    "vee-validate": "^3.4.5",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.5.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.13",
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-pwa": "^4.1.1",
-    "@vue/cli-plugin-typescript": "^4.1.1",
-    "@vue/cli-plugin-unit-jest": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
-    "@vue/test-utils": "^1.0.0-beta.28",
+    "@types/jest": "^26.0.23",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-pwa": "^4.5.13",
+    "@vue/cli-plugin-typescript": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/test-utils": "^1.2.0",
     "babel-core": "7.0.0-bridge.0",
-    "ts-jest": "^23.10.5",
-    "typescript": "^3.2.4",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.5.22"
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4",
+    "vue-cli-plugin-vuetify": "^2.4.0",
+    "vue-template-compiler": "^2.6.12"
   },
   "postcss": {
     "plugins": {
